<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:backgroundTint="@color/colorBackground"
    tools:context="com.example.maddiemin.viewsnews.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <TextView
            android:id="@+id/trend_text"
            style="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/trend"
            android:textColor="@color/colorPrimary"
            android:textSize="26dp"
            android:textStyle="italic" />
        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="13dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:inputType="text"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:animationCache="true"
                android:padding="5dp"
                android:visibility="visible"></EditText>
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srch"/>
        </LinearLayout>-->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/politics_button"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/pinkChoice"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/pol"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/global_button"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purpleChoice"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/glo"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/sports_button"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/greenChoice"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/spo"
                    android:textColor="@color/colorBackground" />
                <!--<Button
                    android:id="@+id/favorites_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav"
                    android:backgroundTint="@color/yellowChoice"
                    android:padding="20dp"
                    android:textColor="@color/colorBackground"
                    />-->
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/abc_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/abc"
                    android:padding="20dp"
                    android:text="@string/abc"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/breitbart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/breitbart"
                    android:padding="20dp"
                    android:text="@string/breitbart"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/wsj_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/wsj"
                    android:padding="20dp"
                    android:text="@string/wsj"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/businessInsider_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/businessInsider"
                    android:padding="20dp"
                    android:text="@string/businessInsider"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/nyt_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/nyt"
                    android:padding="20dp"
                    android:text="@string/nyt"
                    android:textColor="@color/colorBackground" />


                <Button
                    android:id="@+id/ap_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ap"
                    android:padding="20dp"
                    android:text="@string/ap"
                    android:textColor="@color/colorBackground" />

                <Button
                    android:id="@+id/wapo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/wsj"
                    android:padding="20dp"
                    android:text="@string/wapo"
                    android:textColor="@color/colorBackground" />
            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
